# CodeMonkeys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT_SNAPSHOT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  constitution.md  mkdocs.yml  pyproject.toml  ruff.toml
.agent/: ADAPTIVE_IMMUNITY.md  CODEMONKEYS_BRAINSTORM.md  CODEMONKEYS_FEATURE_MAP.md  CODEMONKEYS_MASTER_ARCHITECTURE.md  FLEET_ARCHITECTURE.md  MOONSHOT_IDEAS.md  ORCHESTRATOR_ARCHITECTURE.md  PRODUCT_LINE.md  RULE_SCHEMA_SPEC.md  SHIP_INTEGRATION_PLAN.md  SHIP_TOOLING_STACK.md  ULTIMATE_ARCHITECTURE.md  VISION.md  context.md
.agent/rules/: constitution.md
.agent/workflows/: arqon.changelog_guard.md  arqon.perf_guard.md  arqon.release_notes.md  arqon.review.md  arqon.review_pr.md  arqon.security_scan_summary.md  arqon.spec_drift.md  arqon.verify.md  speckit.specify.md  speckit.tasks.md
.codemonkeys/: .gitignore  config.yaml  constitution.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codemonkeys-ci.yml
.specify/templates/: spec-template.md
.speckit/oracle-sota/: spec.md
dash/: index.html  products.json  science_index.json
dash/css/: style.css
dash/js/: app.js
dash/schedules/: codemonkeys-cli.json  codemonkeys-dash.json  spec-kit.json
dash/schemas/: last_run.schema.json  products.schema.json  schedule.schema.json
docs/: REFACTOR_CLI_RENAME.md  architecture.md  cli-reference.md  configuration.md  developer-guide.md  index.md
docs/agent/: ADAPTIVE_IMMUNITY.md  CODEMONKEYS_ARCHITECTURE_v2.md  CODEMONKEYS_BRAINSTORM.md  (+15 more)
schemas/: governance_lock_v1.schema.json  plan_spec_v1.schema.json  run_report_v1.schema.json
scripts/: cutover_rehearsal.py  gc_runs.py  generate_run_report.py  generate_science_index.py  nexus_executor.py  oracle_executor.py  oracle_planner.py  preflight.sh  preflight_check.py  silverback_validate.py
src/: config.rs  lib.rs  main.rs
(+150 files in other folders)
