[package]
name = "codemonkeys"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Novel Byte Labs"]
description = "The Autonomous Software Troop: Governance, Healing, and Chaos Testing"
repository = "https://github.com/novelbytelabs/CodeMonkeys"
license = "Apache-2.0"
keywords = ["devops", "ci", "cli", "ai", "governance", "fuzzing", "autonomous"]
categories = ["development-tools", "command-line-utilities"]


[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
lancedb = "0.16"

# AI / Embeddings
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"

# Utilities
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = "0.4"
ignore = "0.4"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tempfile = "3"

# Arrow (for LanceDB)
arrow-array = "54"
arrow-schema = "54"

[dev-dependencies]
insta = "1"
criterion = "0.5"

[[bin]]
name = "codemonkeys"
path = "src/main.rs"
